# bluebikedata

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json
public/: index.html  regions.json
public/static/: 2022_data.json  2022_output.json  2023_data.json  all_docks.json
server/: app.py  deploy_backend.sh  pyproject.toml
server/.chalice/: config.json  dynamo_tables.json  policy.json
server/.chalice/deployed/: dev.json
server/chalicelib/: constants.py  convert_to_start_end_pairs.py  dynamo.py  get_destinations_by_count.py  output.json  shapes_api.py  upload_to_dynamo.py
server/scripts/: create_former_dock_data.py  former_bb_docks.csv  generate_current_docks_from_trip_data.ipynb  helpers.py  ingest_bb_data.py  shpToJSON.py  test.csv
server/scripts/output/: former_docks.csv
src/: App.css  App.tsx  DateTabs.tsx  constants.ts  index.css  main.tsx
src/api/: all_data.ts  config.ts  destinations.ts  destionations.ts  shapes.ts
src/charts/: ComparisonChart.tsx
src/components/: ChangeMonthButton.tsx  Contact.tsx  ContactAndInfo.tsx  DataLabel.tsx  DateLabel.tsx  DateToggle.tsx  DesktopMenu.tsx  DirectionToggle.tsx  DrawingMenu.tsx  Header.tsx  InfoModal.tsx  Loading.tsx  MobileFilters.tsx  Notifications.tsx  NowDrawingPopup.tsx  ProjectOutlines.tsx  RegionSelection.tsx  Scale.tsx  ShapeSelection.tsx  ShareButton.tsx  Slider.tsx  StationCountPopUp.tsx  StationsByRidership.tsx  StatisticsWidget.tsx  Tabs.tsx  TabsWithLabel.tsx
src/constants/: api.ts  presets.ts  shapes.ts  shapes.tsx
src/helpers/: breakpoints.ts  (+6 more)
(+431 files in other folders)
