[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Patrick Cleary <patcleary11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.15"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
